Remove overflow-y: auto from .lightboxContent, stop it from getting focus in Firefox.

--- a/server/static/common/style.less
+++ b/server/static/common/style.less
@@ -642,7 +642,6 @@ table{
 	margin: 8em auto 0px;
 	vertical-align: middle;
 	max-height: 100em;
-	overflow-y: auto;
 	padding: 0.5em 1em 1em 1em;
 	.border-radius(0.5em);
 	.box-shadow(0px 0.5em 3em rgba(0, 0, 0, 0.5));
